--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" href="./images/reddaisy.png" />
     <title>FilmFlix Case Study</title>
 </head>
 
